# GUI

./: .gitignore  CMakeLists.txt  README.md  application.cpp  application.h  crefile.hpp  events.cpp  events.h  filesystem.hpp  font.h  font_small.h  gui.cpp  gui.h  image.cpp  image.h  layout.cpp  layout.h  localization.cpp  localization.h  renderer.cpp  renderer.h  sdl_headers.h  skin.h  stb.cpp  stb.h
cmake/: FindSDL2_gfx.cmake
glad/: glad.c  glad.h  khrplatform.h
nanovg/: CMakeLists.txt
osdialog/: CMakeLists.txt  OsDialog.hpp  osdialog.h  osdialog_gtk2.c  osdialog_mac.m  osdialog_win.c
test/: main.cpp
widgets/: button.cpp  button.h  check.cpp  check.h  colorpicker.cpp  colorpicker.h  imageview.cpp  imageview.h  keyboard.cpp  keyboard.h  label.cpp  label.h  list.cpp  list.h  panel.cpp  panel.h  scroll.cpp  scroll.h  scrollview.cpp  scrollview.h  spinner.cpp  spinner.h  splitview.cpp  splitview.h  widget.cpp  widget.h
